# bestMUN

./: README.md  __init__.py  delegate.py  gui.py  main.py  session.py
app/: session.py
resources/flags/: Makefile.am  Makefile.in
run/: pyvenv.cfg
run/Scripts/: activate  activate.bat
