flagsdir = $(pkgdatadir)/resources/flags

dist_flags_DATA = ABKH.png \
AFGH.png \
AGLA.png \
ALBA.png \
ALDE.png \
ALGE.png \
AMSA.png \
ANBA.png \
ANDR.png \
ANGU.png \
ANTA.png \
ARGE.png \
ARLE.png \
ARME.png \
ARUB.png \
ASEA.png \
ASTL.png \
AUST.png \
AZER.png \
BANT.png \
BELG.png \
BERM.png \
BHMS.png \
BHRN.png \
BHUT.png \
BLRU.png \
BLVA.png \
BLZE.png \
BNGL.png \
BNIN.png \
BOHE.png \
BOTS.png \
BRAZ.png \
BRBD.png \
BRIN.png \
BRUN.png \
BUFA.png \
BULG.png \
BURU.png \
BVIS.png \
CAFR.png \
CAMB.png \
CAME.png \
CANA.png \
CARI.png \
CAVE.png \
CDIV.png \
CHAD.png \
CHIL.png \
CHIN.png \
CINS.png \
CKIS.png \
CLMB.png \
CODR.png \
COMN.png \
COMO.png \
CONG.png \
CORC.png \
CRIS.png \
CROA.png \
CUBA.png \
CYIS.png \
CYPR.png \
CZEC.png \
DENM.png \
DJIB.png \
DOMN.png \
DORE.png \
ECUA.png \
EGYP.png \
ELSA.png \
ENGL.png \
EQGU.png \
ERIT.png \
ESTN.png \
ETHP.png \
ETIM.png \
EUUN.png \
FAIS.png \
FARS.png \
FIAV.png \
FIJI.png \
FINL.png \
FPOL.png \
FRAN.png \
FSAT.png \
GABN.png \
GAMB.png \
GEOR.png \
GERM.png \
GHAN.png \
GIBR.png \
GREC.png \
GREN.png \
GRLD.png \
GUAM.png \
GUAT.png \
GUBA.png \
GUER.png \
GUIN.png \
GUYA.png \
HAIT.png \
HOND.png \
HONG.png \
HUNG.png \
ICEL.png \
ICRC.png \
INDA.png \
INDN.png \
IRAN.png \
IRAQ.png \
IREL.png \
ISCO.png \
ISMA.png \
ISRA.png \
ITAL.png \
JAMA.png \
JAPA.png \
JERS.png \
JORD.png \
KAZK.png \
KENY.png \
KIRB.png \
KUWA.png \
KYRG.png \
LAOS.png \
LATV.png \
LBYA.png \
LEBA.png \
LEST.png \
LIBE.png \
LIEC.png \
LITH.png \
LUXE.png \
MACA.png \
MACE.png \
MADA.png \
MAIS.png \
MALD.png \
MALI.png \
MALS.png \
MALT.png \
MALW.png \
MAUR.png \
MEXC.png \
MICR.png \
MIIS.png \
MNGR.png \
MOLD.png \
MONA.png \
MONG.png \
MONT.png \
MORC.png \
MOZA.png \
MRTS.png \
MYAN.png \
NAMB.png \
NATO.png \
NAUR.png \
NCYP.png \
NEAN.png \
NEPA.png \
NETH.png \
NFIS.png \
NGRA.png \
NICA.png \
NIGR.png \
NIUE.png \
NKOR.png \
NMAR.png \
NOIR.png \
NORD.png \
NORW.png \
NWCA.png \
NWZE.png \
OAST.png \
OAUN.png \
OLYM.png \
OMAN.png \
OPEC.png \
OSCE.png \
PAKS.png \
PALA.png \
PANA.png \
PANG.png \
PARA.png \
PERU.png \
PHIL.png \
PIIS.png \
POLA.png \
PORT.png \
PURC.png \
QATA.png \
RMNA.png \
RNUN.png \
RUSS.png \
RWAN.png \
SAAR.png \
SAMA.png \
SAMI.png \
SAMO.png \
SARK.png \
SCOT.png \
SEBO.png \
SENE.png \
SERB.png \
SEYC.png \
SGSS.png \
SILE.png \
SING.png \
SKOR.png \
SLVA.png \
SMLA.png \
SMLD.png \
SMOM.png \
SOAF.png \
SOIS.png \
SOSS.png \
SOYM.png \
SPAN.png \
SPCO.png \
SRLA.png \
STHC.png \
STKN.png \
STLU.png \
STPM.png \
STPR.png \
SUDA.png \
SURN.png \
SVGR.png \
SVKA.png \
SWDN.png \
SWIT.png \
SYRA.png \
SZLD.png \
TAIW.png \
TAJK.png \
TANZ.png \
THAL.png \
TIBE.png \
TKST.png \
TOGO.png \
TONG.png \
TRDC.png \
TRTB.png \
TUCS.png \
TUNS.png \
TURK.png \
TUVA.png \
UAEM.png \
UGAN.png \
UKRN.png \
UNKG.png \
UNNA.png \
UNST.png \
URGY.png \
USVS.png \
UZBK.png \
VACY.png \
VANT.png \
VENZ.png \
VIET.png \
WAFU.png \
WAIS.png \
WALE.png \
WEBA.png \
WESA.png \
WEUN.png \
YEMN.png \
ZAMB.png \
ZBWE.png

if MACAPPBUNDLE
mac-copy-resources: $(dist_flags_DATA)
	mkdir -p $(top_builddir)/wxMUN.app/Contents/Resources/flags
	for i in $(dist_flags_DATA); \
		do cp -f $(srcdir)/$$i $(top_builddir)/wxMUN.app/Contents/Resources/flags; \
	done
endif
